--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <title>Em busca da piramide perdida</title>
 </head>
 <body>
-    <main
+    <main>
         <div class="passo ativo" id="passo-0">
             <img src="img/cenario-passo0.png" alt="">
             <p>Um dia desses, dentro de um livro da biblioteca da universidade, eu descobri uma carta antiga sobre uma piramide perdida, escondida com riquezas e belezas naturais inestimaveis. Nessa carta, a autora deixa algumas pistas para encontrar essa piramide e eu decidi segui-las!</p>
-            <button class="btn-proximo" data-proximo="1">Mexico</button>
-            <button class="btn-proximo" data-proximo="2">Egito</button>
+            <button class="btn-proximo" data-proximo="1">Egito</button>
+            <button class="btn-proximo" data-proximo="2">Mexico</button>
         </div>
         <div class="passo" id="passo-1">
             <p>Você começa sua jornada no Egito, explorando as piramides mais famosas. Pelo amanhecer encontrei a primeira pista.</p>
